Add conversion of PMD range to cartesian coordinates to simulation library.
This is for convenience. See the changes to the PMD example program.

--- a/libcamsim/camsim.qrc
+++ b/libcamsim/camsim.qrc
@@ -15,6 +15,8 @@
     <file>simulation-rgb-result-fs.glsl</file>
     <file>simulation-pmd-result-vs.glsl</file>
     <file>simulation-pmd-result-fs.glsl</file>
+    <file>simulation-pmd-coords-vs.glsl</file>
+    <file>simulation-pmd-coords-fs.glsl</file>
     <file>convert-to-srgb-vs.glsl</file>
     <file>convert-to-srgb-fs.glsl</file>
     <file>simulation-postproc-lensdistortion-vs.glsl</file>
